# gatk-cpp

./: CMakeLists.txt  README.md  assembler.hpp  cigar.hpp  genetyper.hpp  graph_wrapper.hpp  haplotype.hpp  intel_pairhmm.hpp  interval.hpp  main.cpp  math_utils.hpp  pairhmm.hpp  quality_utils.hpp  read_clipper.hpp  read_filter.hpp  sam.hpp  smithwaterman.hpp  variant.hpp
native/: avx-functions-float.h
parser/: parser.hpp
